[project]
name = "endless-nodes"
description = "A small set of nodes I created for myself. Features multiple prompts in batchesm an image saver with ability to have JSON saved to separate folder, image analysis nodes, switches for text and numbers, and more."
version = "1.00"
license = { file = "LICENSE" }
dependencies = ""
[project.urls]
Repository = "https://github.com/tusharbhutt/Endless-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "tusharbhutt"
DisplayName = "Endless-Nodes"
Icon = ""
