[project]
name = "endless-nodes"
version = "1.3.0"
description = "Modular, prompt-aware nodes for ComfyUI—analyze images, rank prompts, embed with CLIP, batch with control, and explore aesthetic/structural depth. 🌊✨"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ""

[project.urls]
Repository = "https://github.com/tusharbhutt/Endless-Nodes"

[tool.comfy]
PublisherId = "tusharbhutt"
DisplayName = "Endless 🌊✨ Nodes"
Icon = "https://raw.githubusercontent.com/tusharbhutt/Endless-Nodes/main/img/icon.png"